----------------------------------------------------------------------
 OmegaT 3.0.7 update 1
----------------------------------------------------------------------
   6 Enhancements
   1 Bug fix
   1 Localisation update
----------------------------------------------------------------------
3.0.7 update 1 vs. 3.0.7

  Implemented requests:

  - Show XLIFF trans-unit note as a comment 
  https://sourceforge.net/p/omegat/feature-requests/803/

  Other enhancements:
  
  - New debugging information about team projects available in the logs
(if org.omegat.level=FINEST is set in logger.properties)

  - A graphical version of the script check_same_segments.groovy was 
added: show_same_segments.groovy

  - The ${diff} display is now "optimized" by concatenating consecutive 
inserts or deletes separated only by whitespace. This makes the diff more 
readable.

  - In addition to ${diff}, there is also now ${diffReversed} in the 
Fuzzy Matches pane display options

  For the two points above, see
  - Missing part from matches not highlighted
  https://sourceforge.net/p/omegat/bugs/264/
and
  - Show where text has been added in match window 
  https://sourceforge.net/p/omegat/feature-requests/183/

  - New option in the XLIFF filter: force shortcut to "f" for 
<it pos="end"> tags

  Bug fixes:

  - Missing orion jar in lib folder
  https://sourceforge.net/p/omegat/bugs/639/

  Localisation updates:

  - Italian localisation updated to 3.0.7 (UI, documentation)

----------------------------------------------------------------------
 OmegaT 3.0.7 
----------------------------------------------------------------------
   7 Enhancements
   2 Bug fixes
   1 Localisation update
----------------------------------------------------------------------
3.0.7 vs. 3.0.6

  Implemented requests:

  - Keep relative addressing in *.project when possible
  https://sourceforge.net/p/omegat/feature-requests/734/

  - Validate tags: constrain to file